--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,7 @@
 
 Publication Date 7.x-2.x, xxxx-xx-xx
 ------------------------------------------
+#2344527 by jstoller: Remove inapropriate files array declarations.
 When granting access to the Published On field, don't grant access to any other
   collateral fields.
 
