--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -2,8 +2,8 @@
 Publication Date 7.x-2.x, xxxx-xx-xx
 ------------------------------------------
 #2344527 by jstoller: Remove inapropriate files array declarations.
-When granting access to the Published On field, don't grant access to any other
-  collateral fields.
+#2157049 by jstoller: When granting access to the Published On field, don't
+  grant access to any other collateral fields.
 
 Publication Date 7.x-2.0, 2014-06-07
 ------------------------------------------
