--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,6 +1,8 @@
 
 Publication Date 7.x-2.x, xxxx-xx-xx
 ------------------------------------------
+#2210853 by jstoller: Add support for jQuery date picker when Date Popup module
+  is enabled.
 #2379503 by jstoller: Reset the publication date when a node is cloned using the
   Node Clone module.
 #2378797 by ramsalt: Add views argument handlers.
