Issue #2643568 by jstoller: Test error: Only variables should be passed by reference

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,7 @@ Publication Date 7.x-2.x, xxxx-xx-xx
 ------------------------------------------
 #2499731 by dtamajon, jstoller: Undefined index: #default_value in
   date_popup_process_time_part().
+#2643568 by jstoller: Test error: Only variables should be passed by reference
 
 Publication Date 7.x-2.2, 2015-03-06
 ------------------------------------------
